# baibo

./: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  prettier.config.js  vite.config.ts
docs/: frontend-ui-constraints.md  mvp-checkpoints.md  system-spec.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs
src-tauri/src/domain/: app_info.rs
src/lib/: index.ts
src/lib/domain/: provider.spec.ts  provider.ts
src/lib/ipc/: app.ts
src/routes/: +page.svelte
