[package]
name = "baibo"
version = "0.1.0"
description = "Local-first workspace for coordinating coding agents"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "baibo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
